{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 417,
  "lineage": "a3cccf35-2c98-5202-17fa-e4daf81f4206",
  "resources": [
    {
      "module": "module.http_lb",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "http_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/zones/us-central1-a/instanceGroups/mig-instance-group-1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/zones/us-central1-a/instanceGroups/mig-instance-group-2",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-10-16T03:58:55.607-07:00",
            "enable_cdn": false,
            "fingerprint": "ZBopPDdcpmo=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/healthChecks/http-health-check"
            ],
            "id": "projects/versatile-nomad-438205-q7/global/backendServices/http-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-backend",
            "port_name": "http",
            "project": "versatile-nomad-438205-q7",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/backendServices/http-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.http_lb",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "http_lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.49.184.232",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-10-16T03:58:04.623-07:00",
            "id": "projects/versatile-nomad-438205-q7/global/addresses/http-lb-ip",
            "name": "http-lb-ip",
            "prefix_length": 0,
            "project": "versatile-nomad-438205-q7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/addresses/http-lb-ip"
          }
        }
      ]
    },
    {
      "module": "module.http_lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/versatile-nomad-438205-q7/global/forwardingRules/http-lb-rule",
            "ip_address": "34.49.184.232",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-lb-rule",
            "port_range": "80",
            "project": "versatile-nomad-438205-q7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/forwardingRules/http-lb-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/targetHttpProxies/http-lb-proxy"
          },
          "dependencies": [
            "module.http_lb.google_compute_backend_service.http_backend",
            "module.http_lb.google_compute_global_address.http_lb_ip",
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.http_lb.google_compute_target_http_proxy.http_proxy",
            "module.http_lb.google_compute_url_map.http_map",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.http_lb",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-10-16T03:59:42.584-07:00",
            "id": "projects/versatile-nomad-438205-q7/global/targetHttpProxies/http-lb-proxy",
            "name": "http-lb-proxy",
            "project": "versatile-nomad-438205-q7",
            "proxy_bind": false,
            "proxy_id": 2792458731040940657,
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/targetHttpProxies/http-lb-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/urlMaps/http-lb-map"
          },
          "dependencies": [
            "module.http_lb.google_compute_backend_service.http_backend",
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.http_lb.google_compute_url_map.http_map",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.http_lb",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-10-16T03:59:29.474-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/backendServices/http-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "2qsp9AzrWFc=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/versatile-nomad-438205-q7/global/urlMaps/http-lb-map",
            "map_id": 8148201130025951870,
            "name": "http-lb-map",
            "path_matcher": [],
            "project": "versatile-nomad-438205-q7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/urlMaps/http-lb-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.http_lb.google_compute_backend_service.http_backend",
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.internal_lb_vpc1",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "internal_lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.31.185.103",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-10-16T04:00:16.994-07:00",
            "id": "projects/versatile-nomad-438205-q7/regions/us-central1/addresses/ilb-ip-vpc-network-1",
            "name": "ilb-ip-vpc-network-1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "versatile-nomad-438205-q7",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/addresses/ilb-ip-vpc-network-1"
          },
          "dependencies": [
            "module.http_lb.google_compute_backend_service.http_backend",
            "module.http_lb.google_compute_global_address.http_lb_ip",
            "module.http_lb.google_compute_global_forwarding_rule.http_forwarding_rule",
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.http_lb.google_compute_target_http_proxy.http_proxy",
            "module.http_lb.google_compute_url_map.http_map",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.internal_lb_vpc1",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "ilb_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-10-16T04:39:47.190-07:00",
            "forwarding_rule_id": 4492708143178062060,
            "id": "projects/versatile-nomad-438205-q7/regions/us-central1/forwardingRules/internal-lb-vpc-network-1",
            "ip_address": "10.0.1.3",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "internal-lb-vpc-network-1",
            "network": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/networks/vpc-network-1",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "versatile-nomad-438205-q7",
            "recreate_closed_psc": false,
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/forwardingRules/internal-lb-vpc-network-1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/subnetworks/subnet-1",
            "target": "https://www.googleapis.com/compute/beta/projects/versatile-nomad-438205-q7/regions/us-central1/targetHttpProxies/internal-http-proxy-vpc-network-1"
          },
          "dependencies": [
            "module.http_lb.google_compute_backend_service.http_backend",
            "module.http_lb.google_compute_global_address.http_lb_ip",
            "module.http_lb.google_compute_global_forwarding_rule.http_forwarding_rule",
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.http_lb.google_compute_target_http_proxy.http_proxy",
            "module.http_lb.google_compute_url_map.http_map",
            "module.internal_lb_vpc1.google_compute_health_check.internal_health_check",
            "module.internal_lb_vpc1.google_compute_region_backend_service.internal_backend",
            "module.internal_lb_vpc1.google_compute_region_target_http_proxy.internal_http_proxy",
            "module.internal_lb_vpc1.google_compute_region_url_map.internal_url_map",
            "module.internal_lb_vpc1.google_compute_subnetwork.reserved_subnet",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.internal_lb_vpc1",
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "internal_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/zones/us-central1-a/instanceGroups/mig-instance-group-1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2024-10-16T04:00:30.153-07:00",
            "enable_cdn": false,
            "fingerprint": "AEFjCeAwq_g=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/healthChecks/internal-health-check-vpc-network-1"
            ],
            "id": "projects/versatile-nomad-438205-q7/regions/us-central1/backendServices/internal-backend-vpc-network-1",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "internal-backend-vpc-network-1",
            "port_name": "http",
            "project": "versatile-nomad-438205-q7",
            "protocol": "HTTP",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/backendServices/internal-backend-vpc-network-1",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "module.http_lb.google_compute_backend_service.http_backend",
            "module.http_lb.google_compute_global_address.http_lb_ip",
            "module.http_lb.google_compute_global_forwarding_rule.http_forwarding_rule",
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.http_lb.google_compute_target_http_proxy.http_proxy",
            "module.http_lb.google_compute_url_map.http_map",
            "module.internal_lb_vpc1.google_compute_health_check.internal_health_check",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.internal_lb_vpc1",
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "internal_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-10-16T04:02:15.228-07:00",
            "default_service": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/backendServices/internal-backend-vpc-network-1",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "nMnlabpffj4=",
            "host_rule": [],
            "id": "projects/versatile-nomad-438205-q7/regions/us-central1/urlMaps/internal-url-map-vpc-network-1",
            "map_id": 2933751288084702168,
            "name": "internal-url-map-vpc-network-1",
            "path_matcher": [],
            "project": "versatile-nomad-438205-q7",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/urlMaps/internal-url-map-vpc-network-1",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.http_lb.google_compute_backend_service.http_backend",
            "module.http_lb.google_compute_global_address.http_lb_ip",
            "module.http_lb.google_compute_global_forwarding_rule.http_forwarding_rule",
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.http_lb.google_compute_target_http_proxy.http_proxy",
            "module.http_lb.google_compute_url_map.http_map",
            "module.internal_lb_vpc1.google_compute_health_check.internal_health_check",
            "module.internal_lb_vpc1.google_compute_region_backend_service.internal_backend",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.internal_lb_vpc1",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "reserved_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2024-10-16T04:34:34.209-07:00",
            "gateway_address": "192.168.1.1",
            "id": "projects/versatile-nomad-438205-q7/regions/us-central1/subnetworks/vpc-network-1-reserved-subnet",
            "ip_cidr_range": "192.168.1.0/24",
            "name": "vpc-network-1-reserved-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/networks/vpc-network-1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "versatile-nomad-438205-q7",
            "purpose": "REGIONAL_MANAGED_PROXY",
            "region": "us-central1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/subnetworks/vpc-network-1-reserved-subnet"
          },
          "dependencies": [
            "module.http_lb.google_compute_backend_service.http_backend",
            "module.http_lb.google_compute_global_address.http_lb_ip",
            "module.http_lb.google_compute_global_forwarding_rule.http_forwarding_rule",
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.http_lb.google_compute_target_http_proxy.http_proxy",
            "module.http_lb.google_compute_url_map.http_map",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.internal_lb_vpc2",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "internal_lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.42.229.154",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-10-16T04:00:16.988-07:00",
            "id": "projects/versatile-nomad-438205-q7/regions/us-central1/addresses/ilb-ip-vpc-network-2",
            "name": "ilb-ip-vpc-network-2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "versatile-nomad-438205-q7",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/addresses/ilb-ip-vpc-network-2"
          },
          "dependencies": [
            "module.http_lb.google_compute_backend_service.http_backend",
            "module.http_lb.google_compute_global_address.http_lb_ip",
            "module.http_lb.google_compute_global_forwarding_rule.http_forwarding_rule",
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.http_lb.google_compute_target_http_proxy.http_proxy",
            "module.http_lb.google_compute_url_map.http_map",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.internal_lb_vpc2",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "ilb_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-10-16T04:48:55.732-07:00",
            "forwarding_rule_id": 7612916379513132744,
            "id": "projects/versatile-nomad-438205-q7/regions/us-central1/forwardingRules/internal-lb-vpc-network-2",
            "ip_address": "10.0.2.2",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "internal-lb-vpc-network-2",
            "network": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/networks/vpc-network-2",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "versatile-nomad-438205-q7",
            "recreate_closed_psc": false,
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/forwardingRules/internal-lb-vpc-network-2",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/subnetworks/subnet-2",
            "target": "https://www.googleapis.com/compute/beta/projects/versatile-nomad-438205-q7/regions/us-central1/targetHttpProxies/internal-http-proxy-vpc-network-2"
          },
          "dependencies": [
            "module.http_lb.google_compute_backend_service.http_backend",
            "module.http_lb.google_compute_global_address.http_lb_ip",
            "module.http_lb.google_compute_global_forwarding_rule.http_forwarding_rule",
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.http_lb.google_compute_target_http_proxy.http_proxy",
            "module.http_lb.google_compute_url_map.http_map",
            "module.internal_lb_vpc2.google_compute_health_check.internal_health_check",
            "module.internal_lb_vpc2.google_compute_region_backend_service.internal_backend",
            "module.internal_lb_vpc2.google_compute_region_target_http_proxy.internal_http_proxy",
            "module.internal_lb_vpc2.google_compute_region_url_map.internal_url_map",
            "module.internal_lb_vpc2.google_compute_subnetwork.reserved_subnet",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.internal_lb_vpc2",
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "internal_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/zones/us-central1-a/instanceGroups/mig-instance-group-2",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2024-10-16T04:00:20.667-07:00",
            "enable_cdn": false,
            "fingerprint": "2oupllXJ7NE=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/healthChecks/internal-health-check-vpc-network-2"
            ],
            "id": "projects/versatile-nomad-438205-q7/regions/us-central1/backendServices/internal-backend-vpc-network-2",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "internal-backend-vpc-network-2",
            "port_name": "http",
            "project": "versatile-nomad-438205-q7",
            "protocol": "HTTP",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/backendServices/internal-backend-vpc-network-2",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "module.http_lb.google_compute_backend_service.http_backend",
            "module.http_lb.google_compute_global_address.http_lb_ip",
            "module.http_lb.google_compute_global_forwarding_rule.http_forwarding_rule",
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.http_lb.google_compute_target_http_proxy.http_proxy",
            "module.http_lb.google_compute_url_map.http_map",
            "module.internal_lb_vpc2.google_compute_health_check.internal_health_check",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.internal_lb_vpc2",
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "internal_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-10-16T04:02:19.381-07:00",
            "default_service": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/backendServices/internal-backend-vpc-network-2",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "doU55NC-yYA=",
            "host_rule": [],
            "id": "projects/versatile-nomad-438205-q7/regions/us-central1/urlMaps/internal-url-map-vpc-network-2",
            "map_id": 8313256134800712660,
            "name": "internal-url-map-vpc-network-2",
            "path_matcher": [],
            "project": "versatile-nomad-438205-q7",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/urlMaps/internal-url-map-vpc-network-2",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.http_lb.google_compute_backend_service.http_backend",
            "module.http_lb.google_compute_global_address.http_lb_ip",
            "module.http_lb.google_compute_global_forwarding_rule.http_forwarding_rule",
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.http_lb.google_compute_target_http_proxy.http_proxy",
            "module.http_lb.google_compute_url_map.http_map",
            "module.internal_lb_vpc2.google_compute_health_check.internal_health_check",
            "module.internal_lb_vpc2.google_compute_region_backend_service.internal_backend",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.internal_lb_vpc2",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "reserved_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2024-10-16T04:34:34.229-07:00",
            "gateway_address": "192.168.2.1",
            "id": "projects/versatile-nomad-438205-q7/regions/us-central1/subnetworks/vpc-network-2-reserved-subnet",
            "ip_cidr_range": "192.168.2.0/24",
            "name": "vpc-network-2-reserved-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/networks/vpc-network-2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "versatile-nomad-438205-q7",
            "purpose": "REGIONAL_MANAGED_PROXY",
            "region": "us-central1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/subnetworks/vpc-network-2-reserved-subnet"
          },
          "dependencies": [
            "module.http_lb.google_compute_backend_service.http_backend",
            "module.http_lb.google_compute_global_address.http_lb_ip",
            "module.http_lb.google_compute_global_forwarding_rule.http_forwarding_rule",
            "module.http_lb.google_compute_health_check.http_health_check",
            "module.http_lb.google_compute_target_http_proxy.http_proxy",
            "module.http_lb.google_compute_url_map.http_map",
            "module.mig_vpc1.google_compute_instance_group_manager.mig",
            "module.mig_vpc1.google_compute_instance_template.instance_template",
            "module.mig_vpc2.google_compute_instance_group_manager.mig",
            "module.mig_vpc2.google_compute_instance_template.instance_template",
            "module.vpc1.google_compute_network.vpc_network",
            "module.vpc1.google_compute_subnetwork.subnet",
            "module.vpc2.google_compute_network.vpc_network",
            "module.vpc2.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-16T03:58:17.459-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/versatile-nomad-438205-q7/global/firewalls/vpc-network-1-allow-http-https",
            "log_config": [],
            "name": "vpc-network-1-allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/networks/vpc-network-1",
            "priority": 1000,
            "project": "versatile-nomad-438205-q7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/firewalls/vpc-network-1-allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/versatile-nomad-438205-q7/global/networks/vpc-network-1",
            "mtu": 0,
            "name": "vpc-network-1",
            "project": "versatile-nomad-438205-q7",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/networks/vpc-network-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-10-16T03:58:18.405-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/versatile-nomad-438205-q7/regions/us-central1/subnetworks/subnet-1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/networks/vpc-network-1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "versatile-nomad-438205-q7",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/subnetworks/subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc1.google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-16T03:58:16.549-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/versatile-nomad-438205-q7/global/firewalls/vpc-network-2-allow-http-https",
            "log_config": [],
            "name": "vpc-network-2-allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/networks/vpc-network-2",
            "priority": 1000,
            "project": "versatile-nomad-438205-q7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/firewalls/vpc-network-2-allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/versatile-nomad-438205-q7/global/networks/vpc-network-2",
            "mtu": 0,
            "name": "vpc-network-2",
            "project": "versatile-nomad-438205-q7",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/networks/vpc-network-2"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-10-16T03:58:17.544-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/versatile-nomad-438205-q7/regions/us-central1/subnetworks/subnet-2",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/global/networks/vpc-network-2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "versatile-nomad-438205-q7",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/versatile-nomad-438205-q7/regions/us-central1/subnetworks/subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc2.google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}